--- a/Fihirana_database/Fihirana.csproj
+++ b/Fihirana_database/Fihirana.csproj
@@ -49,6 +49,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="source\bible\app.js" />
+    <None Remove="source\bible\css\animate.min.css" />
+    <None Remove="source\bible\css\style.css" />
+    <None Remove="source\bible\js\jquery.min.js" />
+    <None Remove="source\bible\js\textFit.min.js" />
+    <None Remove="source\song\app.js" />
+    <None Remove="source\song\css\animate.min.css" />
+    <None Remove="source\song\css\style.css" />
+    <None Remove="source\song\index.html" />
+    <None Remove="source\song\js\jquery.min.js" />
+    <None Remove="source\song\js\textFit.min.js" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -106,22 +119,49 @@
     <None Include="bin\Debug\source\song\index.html" />
     <Content Include="fihirana.ico" />
     <Content Include="Libraries\1442428805_office_suite_pro_7.ico" />
-    <Content Include="Source\app.js" />
-    <Content Include="Source\Bible\index.html" />
-    <Content Include="Source\Bible\style.css" />
-    <Content Include="Source\css\animate.min.css" />
-    <Content Include="Source\css\style.css" />
-    <Content Include="Source\img\bg.jpg" />
-    <Content Include="Source\index.html" />
-    <Content Include="Source\js\app.js" />
-    <Content Include="Source\js\jquery.min.js" />
-    <Content Include="Source\js\textFit.min.js" />
+    <Content Include="source\bible\app.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\bible\css\animate.min.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\bible\css\style.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Source\Bible\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\bible\js\jquery.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\bible\js\textFit.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>   
+    </Content>
+    <Content Include="source\song\app.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\song\css\animate.min.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\song\css\style.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\song\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\song\js\jquery.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="source\song\js\textFit.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DevExpress.Data.Desktop" Version="23.2.9" />
     <PackageReference Include="DevExpress.DataAccess.UI" Version="23.2.9" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2903.40" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SQLitePCLRaw.bundle_sqlcipher" Version="1.1.14" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
